# backend/app/models/user_model.py
@@ -6,9 +6,9 @@ from pydantic import EmailStr, Field
 class User(Document):
     uuid: Annotated[UUID, Field(default_factory=uuid4), Indexed(unique=True)]
     email: Annotated[EmailStr, Indexed(unique=True)]
+    nick_name: str = Field(...)
     first_name: str | None = None
     last_name: str | None = None
-    nick_name: str | None = None
     hashed_password: str | None = None
     picture: str | None = None
     is_active: bool = True
